--- a/client/assets/templates/login.html
+++ b/client/assets/templates/login.html
@@ -1,4 +1,4 @@
-<div layout=row class="md-padding">
+<div layout=row class="md-padding" style="padding-top:100px;">
 
   <div flex></div> <!-- padding -->
 
