Disable new event button until form is valid

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -43,6 +43,7 @@
     <div ng-hide="filtered.length > 0 || waiting" class="md-padding" layout="column" layout-align="center center">
       <h2>Awesome, let's schedule this!</h2>
       <h3>Don't worry, we'll take care of the invites.</h3>
+      <form name='newEvent'>
       <md-input-container class="md-block">
         <input required type="text" ng-model="sub.name" placeholder="What are we doing?"/>
       </md-input-container>
@@ -58,9 +59,10 @@
       <md-input-container class="md-block">
         <input required type="text" ng-model="sub.location" placeholder="Where are we convening?"/>
       </md-input-container>
-      <md-button class="md-raised md-primary" ng-click="createEvent();">
-        Make it happen!
+      <md-button class="md-raised md-primary" ng-disabled="newEvent.$invalid" ng-click="newEvent.$valid && createEvent();">
+        <span style="padding-left: 10px; padding-right: 10px;">Make it happen!</span>
       </md-button>
+      </form>
     </div>
   </md-section>
   </md-content>
