fix color/text issues

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -41,8 +41,7 @@
     <!-- need to design Create Event button -->
   <md-section>
     <div ng-hide="filtered.length > 0 || waiting" class="md-padding" layout="column" layout-align="center center">
-      <h2>Awesome, let's schedule this!</h2>
-      <h3>Don't worry, we'll take care of the invites.</h3>
+      <h3>No matching events, start one!</h3>
       <md-input-container class="md-block">
         <input required type="text" ng-model="sub.name" placeholder="What are we doing?"/>
       </md-input-container>
