--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -104,7 +104,9 @@ md-input-container.md-default-theme label, md-input-container label, md-input-co
   margin-bottom:.5rem;
 }
 
+md-toolbar md-input-container.md-default-theme .md-input, md-toolbar md-input-container .md-input {
+  color: #000;
+}
 md-input-container.md-default-theme .md-input, md-input-container .md-input {
   text-shadow: none ;
-  color: #000;
 }
