Head on main is now fixed pos, hacky

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -1,5 +1,5 @@
-<div ng-controller="EventController" ng-cloak class="relative" layout="column" role="main">
-  <md-toolbar>
+<header md-page-header>
+  <md-toolbar scroll md-scroll-shrink>
     <div class="md-toolbar-tools" layout="row">
       <div flex="4">
         <md-icon aria-label="search" class="material-icons">search</md-icon>
@@ -11,11 +11,10 @@
       <md-button ng-click="myEvents()" flex="33">
         My Events
       </md-button>
-
     </div>
-   
   </md-toolbar>
-  <md-content style="padding-bottom: 56px;">
+</header>
+  <md-content style="padding-bottom: 56px; padding-top: 50px;">
     <md-section>
       <md-grid-list
         md-cols="2" md-cols-sm="3" md-cols-md="4" md-cols-gt-md="6"
