Add padding to magnifying glass icon

--- a/client/assets/templates/main.html
+++ b/client/assets/templates/main.html
@@ -2,7 +2,7 @@
   <md-toolbar scroll md-scroll-shrink>
     <div class="md-toolbar-tools" layout="row">
       <div flex="4">
-        <md-icon aria-label="search" class="material-icons">search</md-icon>
+        <md-icon aria-label="search" class="material-icons" style="padding-right: 1.5em;">search</md-icon>
       </div>
       <md-input-container md-theme="input" style="padding-top: 1.5em;" flex>
         <label>&nbsp;</label>
