--- a/client/assets/templates/user-detail.html
+++ b/client/assets/templates/user-detail.html
@@ -24,11 +24,12 @@
       <h1 ng-if="events.length == 0">{{ details.username }} hasn't attended any events</h1>
     </div>
   </section>
-  <section>
+  <md-content style="padding-bottom: 56px; padding-top: 50px;">
+    <md-section>
       <md-grid-list
         md-cols="2" md-cols-sm="3" md-cols-md="4" md-cols-gt-md="6"
         md-row-height-gt-md="1:1" md-row-height="1:1"
-        md-gutter="5px" md-gutter-gt-sm="5px" >
+        md-gutter="0" md-gutter-gt-sm="0" >
         
       <md-grid-tile ng-repeat="event in events"
                       md-rowspan="1"
@@ -36,15 +37,13 @@
                       ng-class=""
                       ng-click="getDetail(event.id)"
                       class="event-tile">
-
-        <img ng-src="{{event.img}}" alt="" class="bg-image">          
+        <img ng-src="{{event.img}}" alt="" class="bg-image">
         <md-grid-tile-footer>
-         <h3><a href="#/events/{{event.id}}">{{event.name}}</a></h3>
+         <h3>{{event.name}}</h3>
          <h4>{{event.location}}</h4>
          <h4>{{event.datetime | date:"EEEE 'at' ha"}}</h4>
         </md-grid-tile-footer>
       </md-grid-tile>
-
-    </md-grid-list>
-  </section>
+      </md-grid-list>
+    </md-section>
 </md-content>
