fix login autocapitalize

--- a/client/assets/templates/login.html
+++ b/client/assets/templates/login.html
@@ -7,7 +7,7 @@
       <div layout="row">
         <md-input-container flex>
         <label>username</label>
-        <input type="text" required ng-model="username">
+        <input type="text" required ng-model="username" autocapitalize="none">
       </md-input-container>
       </div>
       <div layout="row">
