--- a/client/assets/templates/event-detail.html
+++ b/client/assets/templates/event-detail.html
@@ -1,8 +1,8 @@
 <header class="page-header" md-page-header style="height: 50vh;">
-  <div md-header-picture >
+  <div md-header-picture style="max-height:100vh;">
     <img class="header-background" src="{{event.img}}" alt="" style="">
   </div>
-  <md-toolbar scroll>
+  <md-toolbar scroll style="z-index:100;">
     <div class="md-toolbar-tools">
       <md-button class="md-tools" aria-label="Go Back" ng-click="goBack()">
         <md-icon aria-label="keyboard_arrow_left" class="material-icons">keyboard_arrow_left</md-icon>
@@ -16,7 +16,7 @@
 
   <div class="" style="margin-top:48px;position:relative;">
     
-     <div style="position:absolute;top:32px;right:16px;z-index:100;">
+     <div style="position:absolute;top:32px;right:16px;z-index:90;">
       <md-button ng-hide="joined" class="md-button md-raised md-accent" aria-label="Join" ng-click="join()">
         JOIN
       </md-button>
@@ -46,7 +46,7 @@
 
   </div>
 </header>
-<md-content>
+<md-content style="min-height:50vh;">
   <section>
   <div class="dark-background" >
     <md-subheader class="md-primary">Participants</md-subheader>
