--- a/client/assets/templates/user-detail.html
+++ b/client/assets/templates/user-detail.html
@@ -24,7 +24,7 @@
       <h1 ng-if="events.length == 0">{{ details.username }} hasn't attended any events</h1>
     </div>
   </section>
-  <md-content style="padding-bottom: 56px; padding-top: 50px;">
+  <md-content>
     <md-section>
       <md-grid-list
         md-cols="2" md-cols-sm="3" md-cols-md="4" md-cols-gt-md="6"
